test/positive/feature_comment.java

/* This is a comment. */
// This is another comment.

public class feature_comment {
    public feature_comment() {}
}

