test/negative/feature_packageprivateclasses.java

package dovs.joos.features;

/* package private */ class feature_packageprivateclasses {
  public feature_packageprivateclasses() {}
}

